--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body {
   color: #000;
   scroll-behavior: smooth; }
 
+html, body {
+  overflow-x: hidden; }
+
 img {
   max-width: 100%;
   display: block; }
